<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MakeRequestActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:padding="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_headline"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_margin="32dp"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nameText"
                android:textSize="18sp"
                android:minLines="2"
                android:maxLines="4"
                android:hint="@string/enter_your_name"
                android:padding="10dp"
                android:cursorVisible="true"
                android:background="@null"
                android:textColorHint="@color/black"
                android:gravity="top"
                android:textAlignment="gravity"
                android:textColor="@color/black" />

        </FrameLayout>


        <com.google.android.material.textfield.TextInputLayout
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black">

            <AutoCompleteTextView
                android:id="@+id/BloodGroupDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/blood_group"
                android:textColor="@color/black"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/black"
            android:textColorHint="@color/black">

            <AutoCompleteTextView
                android:id="@+id/DivisonDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:hint="@string/divison"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf = "parent"
            app:layout_constraintStart_toStartOf = "parent"
            app:layout_constraintTop_toTopOf = "parent"
            app:boxStrokeColor="@color/black"
            app:boxBackgroundColor="@color/white"
            android:textColorHint="@color/black">

            <AutoCompleteTextView
                android:id="@+id/DistrictDropDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/district"
                android:textColor="@color/black"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <FrameLayout
            android:layout_margin="32dp"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detailAdress"
                android:textSize="18sp"
                android:minLines="2"
                android:maxLines="4"
                android:hint="@string/enter_full_address"
                android:padding="10dp"
                android:cursorVisible="true"
                android:background="@null"
                android:textColorHint="@color/black"
                android:gravity="top"
                android:textAlignment="gravity"
                android:textColor="@color/black" />

        </FrameLayout>


        <FrameLayout
            android:layout_margin="32dp"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/contactNumber"
                android:textSize="18sp"
                android:minLines="2"
                android:maxLines="4"
                android:hint="Contact No"
                android:padding="10dp"
                android:cursorVisible="true"
                android:background="@null"
                android:textColorHint="@color/black"
                android:gravity="top"
                android:textAlignment="gravity"
                android:textColor="@color/black" />

        </FrameLayout>



        <FrameLayout
            android:layout_margin="32dp"
            android:background="@drawable/border_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/requestMessage"
            android:textSize="18sp"
            android:minLines="6"
            android:maxLines="10"
            android:hint="@string/message"
            android:padding="10dp"
            android:cursorVisible="true"
            android:background="@null"
            android:textColorHint="@color/black"
            android:gravity="top"
            android:textAlignment="gravity"
            android:textColor="@color/black" />

        </FrameLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submit_request_button"
            android:text="@string/post_request"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:layout_margin="30dp"/>

    </LinearLayout>


</ScrollView>