<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".Dashboard">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:background="@color/primaryColor"
        app:menu="@menu/three_dot"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />



    <LinearLayout
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/all_blood_request"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circle_background"
                    android:padding="10dp"
                    android:src="@drawable/blood"
                    android:layout_width="128dp"
                    android:layout_height="128dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/all_blood_request"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/make_request"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circle_background"
                    android:padding="10dp"
                    android:src="@drawable/blood_request"
                    android:layout_width="128dp"
                    android:layout_height="128dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/make_a_request"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>


    <LinearLayout
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/all_donor"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circle_background"
                    android:padding="10dp"
                    android:src="@drawable/all_donor"
                    android:layout_width="128dp"
                    android:layout_height="128dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/all_donor_list"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/search_donor"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            android:clickable="true"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:background="@drawable/circle_background"
                    android:padding="10dp"
                    android:src="@drawable/search_donor"
                    android:layout_width="128dp"
                    android:layout_height="128dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/search_donor"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAppearance="?android:textAppearanceSmall"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>



    </LinearLayout>



</LinearLayout>