<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SearchPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="Khoon Dooo8"
        app:titleTextColor="@color/white"
        android:background="@color/primaryColor"
        app:menu="@menu/three_dot"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="Search With Any Option!"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/primaryColor"
        />

    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:id="@+id/BloodGroupDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/blood_group"
            android:textColor="@color/black"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/black"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:id="@+id/DivisonDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:hint="@string/divison"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style = "@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        app:boxStrokeColor="@color/black"
        app:boxBackgroundColor="@color/white"
        android:textColorHint="@color/black">

        <AutoCompleteTextView
            android:id="@+id/DistrictDropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/district"
            android:textColor="@color/black"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/search_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="Search"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/custom_button"
        android:layout_gravity="center" />


</LinearLayout>